--- a/aeson-stream.cabal
+++ b/aeson-stream.cabal
@@ -107,6 +107,7 @@ test-suite aeson-stream-tests
     , aeson-stream
     , base >=4.7 && <5
     , bytestring
+    , deepseq
     , hspec
     , streaming
     , text
