--- a/aeson-stream.cabal
+++ b/aeson-stream.cabal
@@ -58,14 +58,18 @@ library
       aeson
     , base >=4.7 && <5
     , bytestring
+    , scientific
     , streaming
     , text
+    , unordered-containers
+    , vector
   default-language: Haskell2010
 
 test-suite aeson-stream-tests
   type: exitcode-stdio-1.0
   main-is: Main.hs
   other-modules:
+      AesonValueGen
       AllSpecs
       MemoryUsageSpec
       Paths_aeson_stream
@@ -108,7 +112,12 @@ test-suite aeson-stream-tests
     , base >=4.7 && <5
     , bytestring
     , deepseq
+    , hedgehog
     , hspec
+    , hspec-hedgehog
+    , scientific
     , streaming
     , text
+    , unordered-containers
+    , vector
   default-language: Haskell2010
